; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/mvm/extr_tx.c_iwl_mvm_check_ratid_empty.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/mvm/extr_tx.c_iwl_mvm_check_ratid_empty.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwl_mvm = type { i32*, i32 }
%struct.ieee80211_sta = type { i32, i64 }
%struct.iwl_mvm_sta = type { i32, %struct.ieee80211_vif*, %struct.iwl_mvm_tid_data* }
%struct.ieee80211_vif = type { i32 }
%struct.iwl_mvm_tid_data = type { i64, i64, i32, i64 }

@.str = private unnamed_addr constant [46 x i8] c"Can continue addBA flow ssn = next_recl = %d\0A\00", align 1
@IWL_AGG_STARTING = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [46 x i8] c"Can continue DELBA flow ssn = next_recl = %d\0A\00", align 1
@IWL_AGG_OFF = common dso_local global i32 0, align 4
@IWL_INVALID_MAC80211_QUEUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.iwl_mvm*, %struct.ieee80211_sta*, i64)* @iwl_mvm_check_ratid_empty to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iwl_mvm_check_ratid_empty(%struct.iwl_mvm* %0, %struct.ieee80211_sta* %1, i64 %2) #0 {
  %4 = alloca %struct.iwl_mvm*, align 8
  %5 = alloca %struct.ieee80211_sta*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.iwl_mvm_sta*, align 8
  %8 = alloca %struct.iwl_mvm_tid_data*, align 8
  %9 = alloca %struct.ieee80211_vif*, align 8
  store %struct.iwl_mvm* %0, %struct.iwl_mvm** %4, align 8
  store %struct.ieee80211_sta* %1, %struct.ieee80211_sta** %5, align 8
  store i64 %2, i64* %6, align 8
  %10 = load %struct.ieee80211_sta*, %struct.ieee80211_sta** %5, align 8
  %11 = getelementptr inbounds %struct.ieee80211_sta, %struct.ieee80211_sta* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to i8*
  %14 = bitcast i8* %13 to %struct.iwl_mvm_sta*
  store %struct.iwl_mvm_sta* %14, %struct.iwl_mvm_sta** %7, align 8
  %15 = load %struct.iwl_mvm_sta*, %struct.iwl_mvm_sta** %7, align 8
  %16 = getelementptr inbounds %struct.iwl_mvm_sta, %struct.iwl_mvm_sta* %15, i32 0, i32 2
  %17 = load %struct.iwl_mvm_tid_data*, %struct.iwl_mvm_tid_data** %16, align 8
  %18 = load i64, i64* %6, align 8
  %19 = getelementptr inbounds %struct.iwl_mvm_tid_data, %struct.iwl_mvm_tid_data* %17, i64 %18
  store %struct.iwl_mvm_tid_data* %19, %struct.iwl_mvm_tid_data** %8, align 8
  %20 = load %struct.iwl_mvm_sta*, %struct.iwl_mvm_sta** %7, align 8
  %21 = getelementptr inbounds %struct.iwl_mvm_sta, %struct.iwl_mvm_sta* %20, i32 0, i32 1
  %22 = load %struct.ieee80211_vif*, %struct.ieee80211_vif** %21, align 8
  store %struct.ieee80211_vif* %22, %struct.ieee80211_vif** %9, align 8
  %23 = load %struct.iwl_mvm_sta*, %struct.iwl_mvm_sta** %7, align 8
  %24 = getelementptr inbounds %struct.iwl_mvm_sta, %struct.iwl_mvm_sta* %23, i32 0, i32 0
  %25 = call i32 @lockdep_assert_held(i32* %24)
  %26 = load %struct.iwl_mvm_tid_data*, %struct.iwl_mvm_tid_data** %8, align 8
  %27 = getelementptr inbounds %struct.iwl_mvm_tid_data, %struct.iwl_mvm_tid_data* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load %struct.iwl_mvm_tid_data*, %struct.iwl_mvm_tid_data** %8, align 8
  %30 = getelementptr inbounds %struct.iwl_mvm_tid_data, %struct.iwl_mvm_tid_data* %29, i32 0, i32 1
  %31 = load i64, i64* %30, align 8
  %32 = icmp ne i64 %28, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %3
  br label %84

34:                                               ; preds = %3
  %35 = load %struct.iwl_mvm_tid_data*, %struct.iwl_mvm_tid_data** %8, align 8
  %36 = getelementptr inbounds %struct.iwl_mvm_tid_data, %struct.iwl_mvm_tid_data* %35, i32 0, i32 2
  %37 = load i32, i32* %36, align 8
  switch i32 %37, label %83 [
    i32 129, label %38
    i32 128, label %53
  ]

38:                                               ; preds = %34
  %39 = load %struct.iwl_mvm*, %struct.iwl_mvm** %4, align 8
  %40 = load %struct.iwl_mvm_tid_data*, %struct.iwl_mvm_tid_data** %8, align 8
  %41 = getelementptr inbounds %struct.iwl_mvm_tid_data, %struct.iwl_mvm_tid_data* %40, i32 0, i32 1
  %42 = load i64, i64* %41, align 8
  %43 = call i32 @IWL_DEBUG_TX_QUEUES(%struct.iwl_mvm* %39, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i64 %42)
  %44 = load i32, i32* @IWL_AGG_STARTING, align 4
  %45 = load %struct.iwl_mvm_tid_data*, %struct.iwl_mvm_tid_data** %8, align 8
  %46 = getelementptr inbounds %struct.iwl_mvm_tid_data, %struct.iwl_mvm_tid_data* %45, i32 0, i32 2
  store i32 %44, i32* %46, align 8
  %47 = load %struct.ieee80211_vif*, %struct.ieee80211_vif** %9, align 8
  %48 = load %struct.ieee80211_sta*, %struct.ieee80211_sta** %5, align 8
  %49 = getelementptr inbounds %struct.ieee80211_sta, %struct.ieee80211_sta* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 8
  %51 = load i64, i64* %6, align 8
  %52 = call i32 @ieee80211_start_tx_ba_cb_irqsafe(%struct.ieee80211_vif* %47, i32 %50, i64 %51)
  br label %84

53:                                               ; preds = %34
  %54 = load %struct.iwl_mvm*, %struct.iwl_mvm** %4, align 8
  %55 = load %struct.iwl_mvm_tid_data*, %struct.iwl_mvm_tid_data** %8, align 8
  %56 = getelementptr inbounds %struct.iwl_mvm_tid_data, %struct.iwl_mvm_tid_data* %55, i32 0, i32 1
  %57 = load i64, i64* %56, align 8
  %58 = call i32 @IWL_DEBUG_TX_QUEUES(%struct.iwl_mvm* %54, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str.1, i64 0, i64 0), i64 %57)
  %59 = load %struct.iwl_mvm*, %struct.iwl_mvm** %4, align 8
  %60 = getelementptr inbounds %struct.iwl_mvm, %struct.iwl_mvm* %59, i32 0, i32 1
  %61 = load i32, i32* %60, align 8
  %62 = load %struct.iwl_mvm_tid_data*, %struct.iwl_mvm_tid_data** %8, align 8
  %63 = getelementptr inbounds %struct.iwl_mvm_tid_data, %struct.iwl_mvm_tid_data* %62, i32 0, i32 3
  %64 = load i64, i64* %63, align 8
  %65 = call i32 @iwl_trans_txq_disable(i32 %61, i64 %64)
  %66 = load i32, i32* @IWL_AGG_OFF, align 4
  %67 = load %struct.iwl_mvm_tid_data*, %struct.iwl_mvm_tid_data** %8, align 8
  %68 = getelementptr inbounds %struct.iwl_mvm_tid_data, %struct.iwl_mvm_tid_data* %67, i32 0, i32 2
  store i32 %66, i32* %68, align 8
  %69 = load i32, i32* @IWL_INVALID_MAC80211_QUEUE, align 4
  %70 = load %struct.iwl_mvm*, %struct.iwl_mvm** %4, align 8
  %71 = getelementptr inbounds %struct.iwl_mvm, %struct.iwl_mvm* %70, i32 0, i32 0
  %72 = load i32*, i32** %71, align 8
  %73 = load %struct.iwl_mvm_tid_data*, %struct.iwl_mvm_tid_data** %8, align 8
  %74 = getelementptr inbounds %struct.iwl_mvm_tid_data, %struct.iwl_mvm_tid_data* %73, i32 0, i32 3
  %75 = load i64, i64* %74, align 8
  %76 = getelementptr inbounds i32, i32* %72, i64 %75
  store i32 %69, i32* %76, align 4
  %77 = load %struct.ieee80211_vif*, %struct.ieee80211_vif** %9, align 8
  %78 = load %struct.ieee80211_sta*, %struct.ieee80211_sta** %5, align 8
  %79 = getelementptr inbounds %struct.ieee80211_sta, %struct.ieee80211_sta* %78, i32 0, i32 0
  %80 = load i32, i32* %79, align 8
  %81 = load i64, i64* %6, align 8
  %82 = call i32 @ieee80211_stop_tx_ba_cb_irqsafe(%struct.ieee80211_vif* %77, i32 %80, i64 %81)
  br label %84

83:                                               ; preds = %34
  br label %84

84:                                               ; preds = %33, %83, %53, %38
  ret void
}

declare dso_local i32 @lockdep_assert_held(i32*) #1

declare dso_local i32 @IWL_DEBUG_TX_QUEUES(%struct.iwl_mvm*, i8*, i64) #1

declare dso_local i32 @ieee80211_start_tx_ba_cb_irqsafe(%struct.ieee80211_vif*, i32, i64) #1

declare dso_local i32 @iwl_trans_txq_disable(i32, i64) #1

declare dso_local i32 @ieee80211_stop_tx_ba_cb_irqsafe(%struct.ieee80211_vif*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
